--- a/views/index.haml
+++ b/views/index.haml
@@ -18,7 +18,7 @@
         %input{type: 'text', id: 'datepicker', name: 'flight_date'}
       %li
         %label{for: 'flight_time'} Flight Time
-        %input{type: 'text', name: 'flight_time'}
+        %input{type: 'text', id: 'timepicker', name: 'flight_time'}
       %li
         %label{for: 'departure_time_zone'} Departure Time Zone
         %select{name: 'departure_time_zone'}
