Add jquery-ui and setup popup calendar

--- a/views/index.haml
+++ b/views/index.haml
@@ -15,7 +15,7 @@
         %input{type: 'text', name: 'email'}
       %li
         %label{for: 'flight_date'} Flight Date
-        %input{type: 'text', name: 'flight_date'}
+        %input{type: 'text', id: 'datepicker', name: 'flight_date'}
       %li
         %label{for: 'flight_time'} Flight Time
         %input{type: 'text', name: 'flight_time'}
