--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,15 +1,13 @@
 %html
   %head
     %title Flight Reminder
-    %link{ rel: 'stylesheet', type: 'text/css', href: 'js/jquery-ui.min.css ' }
     %script{ type: 'text/javascript', src: 'js/jquery-2.1.1.min.js' }
     %script{ type: 'text/javascript', src: 'js/jquery-ui.min.js' }
+    %link{ rel: 'stylesheet', type: 'text/css', href: 'stylesheets/jquery-ui.theme.css' }
+    %link{ rel: 'stylesheet', type: 'text/css', href: 'stylesheets/jquery-ui.structure.css' }
 
     :javascript
       $(document).ready( function() {
-        $.datepicker.setDefaults(
-          $.extend($.datepicker.regional[''])
-        );
         $('#datepicker').datepicker();
       });
 
