Store flight departure time as one field

--- a/views/index.haml
+++ b/views/index.haml
@@ -22,9 +22,9 @@
       %li
         %label{for: 'departure_time_zone'} Departure Time Zone
         %select{name: 'departure_time_zone'}
-          %option{value: 'Central'} Central
-          %option{value: 'Pacific'} Pacific
-          %option{value: 'Eastern'} Eastern
-          %option{value: 'Mountain'} Mountain
+          %option{value: '-0500'} Central
+          %option{value: '-0700'} Pacific
+          %option{value: '-0400'} Eastern
+          %option{value: '-0600'} Mountain
 
       %input{type: 'submit', value: 'Auto Check Me In!', class: 'button'}
