--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,5 @@
 %form{action: '/', method: 'post'}
+  %h2 Insert Flight Information
   %fieldset
     %ul
       %li
@@ -28,3 +29,20 @@
           %option{value: '-0600'} Mountain
 
       %input{type: 'submit', value: 'Auto Check Me In!', class: 'button'}
+
+%h2 Upcoming Flights
+%table
+  %tr
+    %th Flight Date / Time
+  %tr
+    - @incomplete_flights.each do |flight|
+      %td= DateTime.parse(flight.depart_at.to_s).to_time
+
+%h2 Checked-in Flights
+%table
+  %tr
+    %th Flight Date / Time
+  %tr
+    - @complete_flights.each do |flight|
+      %td= DateTime.parse(flight.depart_at.to_s).to_time
+
